link to stylesheet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Contact info
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pawfect Care – Veterinary Clinic</title>
-  
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
