added hover effects and google map

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Contact info
 
   <section class="hero">
     <h2>Compassionate Care for Your Furry Family</h2>
-    <p><a href="#" style="background:#fff;color:#4CAF50;padding:0.5rem 1rem;border-radius:4px;text-decoration:none;">Book an Appointment</a></p>
+    <p><a href="#" >Book an Appointment</a></p>
   </section>
 
   <section class="services">
@@ -53,6 +53,7 @@ Contact info
     <p>📞 (555) 123-4567</p>
     <p>📧 info@pawfectcare.com</p>
   </section>
+  <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d215488.90705216984!2d-93.92563102226566!3d32.445555404060435!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86312a8d1798e91f%3A0x2ebd2c1687a49cdd!2sShreveport%2C%20LA!5e0!3m2!1sen!2sus!4v1752408706891!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 
   <footer>
     &copy; 2025 Pawfect Care – All rights reserved
